--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,15 @@
   overflow: hidden;
 }
 
+/* Hide scrollbar while keeping scroll functionality */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;     /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;             /* Safari and Chrome */
+}
+
 .navbar-fixed-spacing {
   padding-top: 5rem; /* 80px for mobile */
 }
